--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="og:description" content="Page Cord is an open source chat app inspired by discord">
     <meta name="og:image" content="https://pagecord.vercel.app/other/screenshot.png">
     <link rel="manifest" href="./manifest.json">    
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
