--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="twitter:site" content="https://pagecord.vercel.app">
     <meta name="twitter:title" content="Page Cord">
     <meta name="twitter:description" content="Page Cord is an open source chat app inspired by discord">
-    <meta name="twitter:image" content="https://pagecord.vercel.app/other/screenshot.png">
+    <meta name="twitter:image" content="/other/screenshot.png">
     <meta name="og:card" content="summary_large_image">
     <meta name="og:site" content="https://pagecord.vercel.app">
     <meta name="og:title" content="Page Cord">
     <meta name="og:description" content="Page Cord is an open source chat app inspired by discord">
-    <meta name="og:image" content="https://pagecord.vercel.app/other/screenshot.png">
-    <link rel="manifest" href="./manifest.json">    
+    <meta name="og:image" content="/other/screenshot.png">
+    <link rel="manifest" href="/manifest.json">    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js" crossorigin="anonymous"></script>
   </head>
   <body>
